--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <html data-theme="coffee"></html>
+  <html data-theme="dark"></html>
   <head>
     <meta charset="UTF-8" />
     <style>
@@ -45,15 +45,29 @@
     <link rel="stylesheet" href="spectre.min.css">
 <link rel="stylesheet" href="spectre-exp.min.css">
 <link rel="stylesheet" href="spectre-icons.min.css">
-    <title>Svelte + Vite App</title>
+    <title>Calendario</title>
   </head>
   <body>
+
+    <div class="navbar bg-black">
+  <div class="navbar-start">
+  </div>
+  <div class="navbar-center">
+    <img src="Calendario.png" width="250" height="150">
+  </div>
+  <div class="navbar-end">
+
+
+  </div>
+</div>
+    
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
     <div class=b>
-    <label for="my-modal" class="btn">Aggiungi Evento</label>
-    <label for="my-modal" class="btn">Rimuovi Evento</label>
+    <label for="AddEv" class="btn">Aggiungi Evento</label>
+    <label for="RemEv" class="btn">Rimuovi Evento</label>
     </div>
+
   </body>
 </html>
 
