Fixed "Aggiungi Evento" button

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
     <div class=b>
-    <label for="AddEv" class="btn">Aggiungi Evento</label>
+    <label for="addEv" class="btn">Aggiungi Evento</label>
     <label for="RemEv" class="btn">Rimuovi Evento</label>
     </div>
 
