salva and carica buttons added. improved the interface

--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
 
     <div class="navbar bg-black">
   <div class="navbar-start">
+    <img src="poggialibro.png" width="70" height="50">
+    <button class="btn btn-lg">SALVA</button>
   </div>
   <div class="navbar-center">
     <img src="Calendario.png" width="250" height="150">
   </div>
   <div class="navbar-end">
-
-
+  <button class="btn btn-lg">CARICA</button>
+  <img src="poggialibroreverse.png" width="70" height="50" >
   </div>
 </div>
     
