Added "Save" button

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     <div class=b>
     <label for="addEv" class="btn">Aggiungi Evento</label>
     <label for="RemEv" class="btn">Rimuovi Evento</label>
+      <br /><br />
+      <label for="saveEv" class="btn btn-wide">Salva</label>
     </div>
 
   </body>
